# SkibidiMisbah

./: .flake8  .pre-commit-config.yaml  Makefile  deploy.yml  get-pip.py  main.py  netlify.toml  pyproject.toml  pythonrc.py  requirements.txt
src/: flappy.py
src/entities/: player.py
src/utils/: constants.py  images.py  sounds.py
web/: index.html  pythonrc.py
