[project]
name = "Skibidi Misbah"
version = "1.0.0"
description = "Skibidi Misbah in Pygame"
requires-python = ">=3.9,<4"
dependencies = [
    "pygame == 2.5.2"
]

[tool.pygbag]
build-path = "build"
app-name = "flappybird"
cdn = "https://pygame-web.github.io/archives/0.9/"
include = [
    "assets/",
    "src/",
    "main.py",
    "web/pythonrc.py"
]
template = "web/index.html"

[project.optional-dependencies]
dev = [
    "pygbag == 0.8.2",
    "black >= 22.1.0",
    "pre-commit >= 2.18.1",
    "flake8 >= 4.0.1",
    "isort >= 5.10.1"
    ]

[tool.black]
line-length = 80
exclude = '''
    /(
    | \.git
    | build
    )/
    '''

[tool.isort]
profile = "black"
skip = []
skip_glob = []
